admin check, refacto route

--- a/app/Resources/views/contact/index.html.twig
+++ b/app/Resources/views/contact/index.html.twig
@@ -10,5 +10,6 @@
             {{ message }}
         </div>
     {% endfor %}
+    <p><input type="submit" value="Envoyer" class="btn btn-info" /></p>
     {{ form_end(form) }}
 {% endblock %}
