--- a/app/Resources/views/home/show.html.twig
+++ b/app/Resources/views/home/show.html.twig
@@ -42,7 +42,7 @@
                     <h4>Ajouter un commentaire</h4>
                         {{ form(formComment) }}
 
-            <div class="container"><a class="btn btn-primary float-right" href="{{path('post_index')}}">Retour à l'accueil </a></div>
+            <div class="container"><a class="btn btn-primary float-right" href="{{path('home_index')}}">Retour à l'accueil </a></div>
         </div>
     </div>
 
