--- a/app/Resources/views/Exception/error404.html.twig
+++ b/app/Resources/views/Exception/error404.html.twig
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-12 p-0">
             <div id="header-text" class="text-center">
-                <h1>Page non trouvée</h1>
+                <h1>Page non trouvée : {{ status_text }}</h1>
                 <img src="{{ asset('web/img/page404') }}">
                 <p>code de l'erreur: {{ status_code }}</p>
             </div>
