--- a/app/Resources/views/post/index.html.twig
+++ b/app/Resources/views/post/index.html.twig
@@ -26,11 +26,10 @@
                         <p class="post-meta">Posté le {{ post.createdAt|date('d-m-Y') }}</p>
 
                         <h3 class="post-subtitle">
-                            {#je récupère le contenu en appliquant un truncate pour le châpo#}
-                            {# {{ post.contenu | truncate(100) }} #}
-                            {{ post.content }}
+                            {# je récupère le contenu en appliquant un truncate pour le châpo#}
+                            {{ post.content | truncate(100) }}
                         </h3>
-                        <a class="btn"  href="{{path('home_post_show', {id: post.id})}}">Lire plus...</a>
+                        <a class="btn"  href="{{path('post_show', {id: post.id})}}">Lire plus...</a>
                     </a>
 
                 </div>
