--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -110,7 +110,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <p class="copyright text-muted">Copyright &copy; Reybeka Peyrat Website 2019</p>
+                        <p class="copyright text-muted">Copyright &copy; {{ webmaster }} Website 2019</p>
                     </div>
                 </div>
             </div>
