--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="{{ path('post_index') }}">Gestionnaire</a>
                         </li>
                             {% else %}
-                                <input type="hidden" Gestionnaire>
+                                <input type="hidden" value="Gestionnaire">
                         {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('about_index') }}">A propos</a>
@@ -60,7 +60,7 @@
     {% endblock %}
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('/img/about-bg.jpg')">
+    <header class="masthead" style="background-image: url('{{ asset('/img/about-bg.jpg') }}')">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -82,34 +82,24 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-md-10 mx-auto">
-                        <ul class="list-inline text-center">
-                            <li class="list-inline-item">
+                    <div class="offset-8 col-lg-4 col-md-10 mx-auto">
+
                                 <a href="https://twitter.com/Gloril7?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @Gloril7</a>
                                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
                                 </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse">Facebook</i>
-                </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://github.com/Fossette7/blogSymfony">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse">Github</i>
-                </span>
-                                </a>
-                            </li>
-                        </ul>
+
+
+
+                                <a class="btn btn-outline-secondary" href="https://github.com/Fossette7/blogSymfony"
+                                   aria-label="Follow @me on GitHub">Follow @me</a>
+
+
+
+                                <div class="col-md-12">
+                                    <a type="button" class="badge badge-pill badge-dark" href="{{ path('post_index') }}">Admin access</a>
+                                </div>
+
+
                         <p class="copyright text-muted">Copyright &copy; {{ webmaster }} Website 2019</p>
                     </div>
                 </div>
