--- a/app/Resources/views/post/edit.html.twig
+++ b/app/Resources/views/post/edit.html.twig
@@ -5,9 +5,24 @@
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
-    <p><input type="submit" value="Modifier" class="btn btn-outline-success" /></p>
-    {{ form_end(edit_form) }}
 
+
+
+    <div>
+        <p><input type="submit" value="Modifier" class="btn btn-outline-success" /></p>
+        {% if post.published == 1 %}
+        <p><input class="form-check-input" type="checkbox" id="published" value="{{ post.published }}"/>
+        </p>
+        <p><label class="form-check-label" for="published">En ligne</label></p>
+        {% else %}
+        <p><input class="form-check-input" type="checkbox" id="published" value="post.published"/>
+        </p>
+        <p><label class="form-check-label" for="published">Hors ligne</label></p>
+        {% endif %}
+
+    </div>
+
+    {{ form_end(edit_form) }}
             <a class="btn btn-outline-secondary" href="{{ path('post_index') }}">Retour à la liste</a>
 
             {{ form_start(delete_form) }}
