--- a/app/Resources/views/post/index.html.twig
+++ b/app/Resources/views/post/index.html.twig
@@ -4,7 +4,8 @@
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            <h1>Liste des articles</h1>
+            <h1>Tableau de bord</h1>
+            <h2 class="admin-post">Liste des articles</h2>
             <hr>
 
             <h4>Bienvenue {{ app.user.username }}</h4>
