--- a/app/Resources/views/post/show.html.twig
+++ b/app/Resources/views/post/show.html.twig
@@ -8,7 +8,7 @@
             {# je crée ma zone de post#}
             <div class="post-preview">
                 <h1>Affichage d'un article</h1>
-                <p type="hidden">je suis un numéro id:{{post.id}} </p>
+                <p hidden>je suis un numéro id:{{post.id}} </p>
                 <h2 class="post-title">
                     {#je récupère le titre du post#}
                     {{ post.title }}
@@ -18,6 +18,7 @@
                 </p>
                 {#j'ajoute la date de mise en ligne du post#}
                 <p class="post-meta">Posté le {{ post.createdAt | date('d/m/Y \H:i:s') }}</p>
+                <p class="post-meta">Dernière mise à jour le {{ post.publishedAt | date('d/m/Y \H:i:s') }}</p>
             </div>
 
                 <div>
