--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -4,8 +4,7 @@
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-
-            {% for currentPost in allPosts %}
+            {% for currentPost in allArticles %}
                 <div class="post-preview">
                     <a href="{{ path('home_post_show', { id:currentPost.id }) }}"></a>
                         <h2 class="post-title">
@@ -13,14 +12,34 @@
                         </h2>
                         <p>Posté le {{ currentPost.createdAt|date('d-m-Y H:i:s') }}</p>
                         {#<p class="post-meta">Posté le {{ post.created }}</p>#}
-                        <h3 class="post-subtitle">
+                    <h3 class="post-subtitle">
                             {#je récupère le contenu en appliquant un truncate pour le châpo#}
-                           {{ currentPost.content | truncate(100) }}
-                        </h3>
-                        <a class="btn"  href="{{path('home_post_show', {id: currentPost.id})}}">Lire plus...</a>
-                </div>
-                <hr>
-            {% endfor %}
+                          {{ currentPost.content | truncate(100) }}
+                    </h3>
+               <a class="btn"  href="{{path('home_post_show', {id: currentPost.id})}}">Lire plus...</a>
+       </div>
+       <hr>
+   {% endfor %}
+
+        {#    {% for currentPost in articles %}
+            <div class="post-preview">
+                <a href="{{ path('home_post_show', { id:currentPost.id }) }}"></a>
+                <h2 class="post-title">
+                    {{ currentPost.title }}
+                </h2>
+                <p>Posté le {{ currentPost.createdAt|date('d-m-Y H:i:s') }}</p>
+                {#<p class="post-meta">Posté le {{ post.created }}</p>#}
+
+                <div class="pagination">
+                <ul>
+                    {# On utilise la fonction range(a, b) qui crée un tableau de valeurs entre a et b #}
+                    {% for pageNumber in range(1, numberOfPage) %}
+                        <li{% if pageNumber == page %} class="active"{% endif %}>
+                            <a href="{{ path('home_index')}}?page={{ pageNumber }}">{{ pageNumber }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
 
             <div class="clearfix"><a class="btn btn-primary float-right" href="#">En haut ↑</a></div>
         </div>
