--- a/app/Resources/views/about/index.html.twig
+++ b/app/Resources/views/about/index.html.twig
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="row">
-                        <img src="{{ asset('img/Photo_Reybeka.png') }}" alt="photo Reybeka Peyrat"/>
+                        <img src="{{ asset('img/Reybeka_profil_2.png') }}" alt="photo Reybeka Peyrat"/>
                         <h3><a href="{{ asset('img/CV-RP.pdf') }}">Un clic un CV</a></h3>
                     </div>
                 </div>
