--- a/app/Resources/views/comment/edit.html.twig
+++ b/app/Resources/views/comment/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Blog_comment edit</h1>
+    <h1>Modifier commentaire</h1>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('comment_index') }}">Back to the list</a>
+            <a href="{{ path('comment_index') }}">Liste des commentaires</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
