--- a/app/Resources/views/comment/index.html.twig
+++ b/app/Resources/views/comment/index.html.twig
@@ -12,7 +12,9 @@
                     <p>{{ comment.content }}</p>
                     <a class="btn" href="{{ path('comment_show', { 'id': comment.id }) }}">Voir</a>
 
-                    <a class="btn" href="{{ path('comment_edit', { 'id': comment.id }) }}">Modifier</a>
+                    <a class="btn" href="{{ path('comment_edit', { 'id': comment.id }) }}">Modérer</a>
+
+                    <a class="btn" href="{{ path('comment_show', { 'id': comment.id }) }}">Approuver</a>
                 </div>
                 <hr>
             {% endfor %}
