--- a/app/Resources/views/comment/new.html.twig
+++ b/app/Resources/views/comment/new.html.twig
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('comment_index') }}">Back to the list</a>
+            <a href="{{ path('comment_index') }}">Liste des commentaires</a>
         </li>
     </ul>
 {% endblock %}
