--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -4,6 +4,11 @@
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
+            {% for message in app.flashes('warning') %}
+                <div class="flash-notice">
+                    {{ message }}
+                </div>
+            {% endfor %}
             {% for currentPost in allArticles %}
                 <div class="post-preview">
                     <a href="{{ path('home_post_show', { id:currentPost.id }) }}"></a>
@@ -11,9 +16,8 @@
                             {{ currentPost.title }}
                         </h2>
                         <p>Posté le {{ currentPost.createdAt|date('d-m-Y H:i:s') }}</p>
-                        {#<p class="post-meta">Posté le {{ post.created }}</p>#}
                     <h3 class="post-subtitle">
-                            {#je récupère le contenu en appliquant un truncate pour le châpo#}
+                            {#je récupère le contenu en appliquant un truncate filter pour le châpo#}
                           {{ currentPost.content | truncate(100) }}
                     </h3>
                <a class="btn"  href="{{path('home_post_show', {id: currentPost.id})}}">Lire plus...</a>
@@ -21,24 +25,17 @@
        <hr>
    {% endfor %}
 
-        {#    {% for currentPost in articles %}
-            <div class="post-preview">
-                <a href="{{ path('home_post_show', { id:currentPost.id }) }}"></a>
-                <h2 class="post-title">
-                    {{ currentPost.title }}
-                </h2>
-                <p>Posté le {{ currentPost.createdAt|date('d-m-Y H:i:s') }}</p>
-                {#<p class="post-meta">Posté le {{ post.created }}</p>#}
+                <div class="pagination col-md-12" >
+                    <div class="offset-2 col-md-4 "></div>
 
-                <div class="pagination">
-                <ul>
-                    {# On utilise la fonction range(a, b) qui crée un tableau de valeurs entre a et b #}
+                    {# fonction range(a, b) qui crée un tableau d'intervalle d'éléments depuis start to end #}
                     {% for pageNumber in range(1, numberOfPage) %}
-                        <li{% if pageNumber == page %} class="active"{% endif %}>
-                            <a href="{{ path('home_index')}}?page={{ pageNumber }}">{{ pageNumber }}</a>
-                        </li>
+                        <p{% if pageNumber == page %} class="active"{% endif %}>
+                            <a href="{{ path('home_index')}}?page={{ pageNumber }}">[  {{ pageNumber }}  ]</a>
+                        </p>
                     {% endfor %}
-                </ul>
+
+                </div>
             </div>
 
             <div class="clearfix"><a class="btn btn-primary float-right" href="#">En haut ↑</a></div>
