--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,6 +34,7 @@
                         </li>
                         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                         <li class="nav-item">
+                            <!-- Admin panel -->
                             <a class="nav-link" href="{{ path('post_index') }}">Gestionnaire</a>
                         </li>
                             {% else %}
@@ -43,17 +44,13 @@
                             <a class="nav-link" href="{{ path('about_index') }}">A propos</a>
                         </li>
                         <li class="nav-item">
-                            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                                <a class="link" href="{{ path('security_logout') }}">Se déconnecter</a>
-                                {% else %}
-                                    <a class="nav-link" href="{{ path('login') }}">Connexion</a>
-                            {% endif %}
-
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="{{ path('contact') }}">Contact</a>
                         </li>
-
+                        <li class="nav-item">
+                            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                                <a class="link" href="{{ path('security_logout') }}">Se déconnecter</a>
+                            {% endif %}
+                        </li>
                     </ul>
                 </div>
 
