--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,123 +1,134 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="{{ asset('css/stylesheet.css') }}" />
+<head>
+    <meta charset="UTF-8"/>
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {% block stylesheets %}{% endblock %}
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
+          type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+          rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/stylesheet.css') }}"/>
 
-        <!-- Custom styles for this template -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-              crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ asset('path/to/font-awesome/css/font-awesome.min.css') }}" />
-        <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('css/clean-blog.css') }}" />
-    </head>
-    <body>
-    <!-- Navigation -->
-    {% block navBar %}
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand" href="{{ path('home_index') }}">Mon blog</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('home_index') }}">Home</a>
-                        </li>
-                        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset('css/all.min.css') }}"/>
+    <link rel="stylesheet" href="{{ asset('css/clean-blog.css') }}"/>
+</head>
+<body>
+<!-- Navigation -->
+{% block navBar %}
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('home_index') }}">Mon blog</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                    data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('home_index') }}">Home</a>
+                    </li>
+                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                         <li class="nav-item">
                             <!-- Admin panel -->
                             <a class="nav-link" href="{{ path('post_index') }}">Gestionnaire</a>
                         </li>
-                            {% else %}
-                                <input type="hidden" value="Gestionnaire">
+                    {% else %}
+                        <input type="hidden" value="Gestionnaire">
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('about_index') }}">A propos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('contact') }}">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                            <a class="link" href="{{ path('security_logout') }}">Se déconnecter</a>
                         {% endif %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('about_index') }}">A propos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('contact') }}">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                                <a class="link" href="{{ path('security_logout') }}">Se déconnecter</a>
-                            {% endif %}
-                        </li>
-                    </ul>
-                </div>
-
+                    </li>
+                </ul>
             </div>
-        </nav>
-    {% endblock %}
 
-    <!-- Page Header -->
-    <header class="masthead" style="background-image: url('{{ asset('/img/about-bg.jpg') }}')">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-md-10 mx-auto">
-                    <div class="site-heading">
-                        <h1>Je crée mon blog en PHP</h1>
-                        <span class="subheading">La programmation au service de votre communication</span>
-                    </div>
+        </div>
+    </nav>
+{% endblock %}
+
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('{{ asset('/img/about-bg.jpg') }}')">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="site-heading">
+                    <h1>Je crée mon blog en PHP</h1>
+                    <span class="subheading">La programmation au service de votre communication</span>
                 </div>
             </div>
         </div>
-    </header>
-    <div class="container">
-    {% block body %}{% endblock %}
     </div>
-        {% block javascripts %}{% endblock %}
-    </body>
+</header>
+<div class="container">
+    {% block body %}{% endblock %}
+</div>
+{% block javascripts %}{% endblock %}
+</body>
 
-    {% block footer %}
-        <footer>
-            <div class="col-md-12 social-icons">
-                <div class="row">
-                    <div class="offset-8 col-lg-4 col-md-10 mx-auto">
-
-                                <a href="https://twitter.com/Gloril7?ref_src=twsrc%5Etfw"
-                                   class="twitter-follow-button" data-show-count="false">Follow @Gloril7</a>
-                                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                                </a>
-
-
-
-
-                                <a href="https://github.com/Fossette7/blogSymfony"
-                                   aria-label="Follow @me on GitHub" class="fab fa-github">Github
-                                </a>
-
-
-
-                                <div class="col-md-12">
-                                    <a type="button" class="badge badge-pill badge-dark"
-                                       href="{{ path('post_index') }}">Admin access</a>
-                                </div>
-
-
-                        <p class="copyright text-muted">Copyright &copy; {{ webmaster }} Website 2019</p>
+{% block footer %}
+    <footer>
+        <div class="col-md-12 social-icons">
+            <div class="row">
+                <div class="col-12">
+                    <div class="col-3 offset-3 float-left text-right">
+                        <a href="https://twitter.com/intent/follow?original_referer=http%3A%2F%2Fwww.blogsymfony.fr%2Fapp_dev.php%2Fcontact%2F&amp;ref_src=twsrc%5Etfw&amp;region=follow_link&amp;screen_name=Gloril7&amp;tw_p=followbutton" target="_blank"
+                           aria-label="Follow @me on Twitter">
+                            <span class="fa-stack fa-2x">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-3 float-left">
+                        <a href="https://github.com/Fossette7/blogSymfony" target="_blank"
+                           aria-label="Follow @me on GitHub">
+                            <span class="fa-stack fa-2x">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                     </div>
                 </div>
+                <div class="col-12 text-center">
+                    <a type="button" class="badge badge-pill badge-dark"
+                       href="{{ path('post_index') }}">Admin access
+                    </a>
+                    <p class="copyright text-muted">Copyright &copy; {{ webmaster }} Website 2019</p>
+                </div>
             </div>
-        </footer>
-    {% endblock %}
+        </div>
+    </footer>
+{% endblock %}
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 
-    <!-- Custom scripts for this template -->
-    <script src="/js/clean-blog.js"></script>
+<!-- Custom scripts for this template -->
+<script src="/js/clean-blog.js"></script>
 
 </html>
