--- a/app/Resources/views/about/index.html.twig
+++ b/app/Resources/views/about/index.html.twig
@@ -10,7 +10,8 @@
                 <div class="col-sm-3">
                     <div class="row">
                         <img src="{{ asset('img/Reybeka_profil_2.png') }}" alt="photo Reybeka Peyrat"/>
-                        <h3><a href="{{ asset('img/CV-RP.pdf') }}">Un clic un CV</a></h3>
+                        <h3 class="pdf"><a href="{{ asset('img/CV-RP.pdf') }}" target="_blank"></a></h3>
+                        <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
                     </div>
                 </div>
 
@@ -18,7 +19,23 @@
 
                 <div class="col-sm-9">
                         <h2>Présentation</h2>
-                        <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam                            rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt                                explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia                                     consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui                                 dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora                              incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum                              exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem                            vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui                           dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+                        <p>"<strong>Développeuse d'application spécialisée PHP/Symfony </strong>en formation,
+                            <br>j'ai découvert une passion.
+                            <br>
+                            Issue d'un parcours atypique, j'ai commencé ma carrière professionnelle
+                            dans la vente, puis l'aérien aux contacts des passagers, en passant par le commerce international.
+                            <br>
+                            Je me suis lancée dans un domaine qui permet de <strong>créer</strong> et de <strong>communiquer</strong>
+                            de manière digitale grâce au <strong>développement web</strong>.
+
+                            Mon expérience ainsi que mes compétences acquises dans ces divers domaines me permettent d'être à
+                            l'écoute de vos besoins afin de créer un projet sur-mesure selon vos attentes.
+                            L'outil digital est indispensable pour votre entreprise, de plus il est primordial d'avoir un site web
+                            qui reflète votre image.<br>
+
+                            Je suis à votre disposition pour discuter de vos projets et mettre mes compétences à votre
+                            service.
+                            "</p>
                 </div>
             </div>
     </div>
