--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -5,17 +5,13 @@
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+    <p><input type="submit" value="Modifier" class="btn btn-outline-success" /></p>
     {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('user_index') }}">Retour à la liste</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <div>
+        <p><a type="btn" class="btn btn-outline-secondary"
+              href="{{ path('user_index') }}">Retour à la liste</a>
+        </p>
+    </div>
+
 {% endblock %}
