--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -7,6 +7,8 @@
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
 
+            <a type="btn" class="btn btn-outline-primary" href="{{ path('user_new') }}">Créer un nouvel utilisateur</a>
+
             {% for user in users %}
                 <div class="user-preview">
                     <h2><a href="{{ path('user_show', { 'id': user.id }) }}">{{ user.username }}</a></h2>
@@ -21,10 +23,8 @@
             <div class="clearfix"><a class="btn btn-primary float-right" href="#">En haut ↑</a></div>
         </div>
     </div>
-            <div class="offset-2 col-md-4">
-                <a class="btn" href="{{ path('user_new') }}">Créer un nouvel utilisateur</a>
-            </div>
-    <div class="offset-6 col-md-4">
+
+    <div class="offset-2 col-md-2">
         <a class="btn btn-primary float-right" href="{{path('post_index')}}">Retour au gestionnaire </a>
     </div>
 {% endblock %}
