--- a/app/Resources/views/about/index.html.twig
+++ b/app/Resources/views/about/index.html.twig
@@ -10,8 +10,9 @@
                 <div class="col-sm-3">
                     <div class="row">
                         <img src="{{ asset('img/Reybeka_profil_2.png') }}" alt="photo Reybeka Peyrat"/>
-                        <h3 class="pdf"><a href="{{ asset('img/CV-RP.pdf') }}" target="_blank"></a></h3>
-                        <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+                        <div class="col-sm-3"><button type="button" class="btn btn-secondary">
+                        <a class="pdf" href="{{ asset('img/CV-RP.pdf') }}" target="_blank">
+                        </a>CV</button></div>
                     </div>
                 </div>
 
