correction post isPublished

--- a/app/Resources/views/about/index.html.twig
+++ b/app/Resources/views/about/index.html.twig
@@ -26,7 +26,8 @@
                             Issue d'un parcours atypique, j'ai commencé ma carrière professionnelle
                             dans la vente, puis l'aérien aux contacts des passagers, en passant par le commerce international.
                             <br>
-                            Je me suis lancée dans un domaine qui permet de <strong>créer</strong> et de <strong>communiquer</strong>
+                            Je me suis lancée dans un domaine qui permet de <strong>créer</strong> et de
+                            <strong>communiquer</strong>
                             de manière digitale grâce au <strong>développement web</strong>.
 
                             Mon expérience ainsi que mes compétences acquises dans ces divers domaines me permettent d'être à
@@ -36,7 +37,7 @@
 
                             Je suis à votre disposition pour discuter de vos projets et mettre mes compétences à votre
                             service.
-                            "</p>
+                            </p>
                 </div>
             </div>
     </div>
