--- a/app/Resources/views/post/edit.html.twig
+++ b/app/Resources/views/post/edit.html.twig
@@ -3,25 +3,32 @@
 {% block body %}
     <h1>Modifier l'article</h1>
 
-    {{ form_start(edit_form) }}
-    {{ form_widget(edit_form) }}
-
     <div class="row">
         <div class="col-md-12">
-            <div class="col-3 float-left text-center">
-                <input type="submit" value="Modifier"
-                       class="btn btn-outline-success"/></div>
-            <div class="col-3 float-left text-center">
-                <a class="btn btn-outline-secondary"
-                   href="{{ path('post_index') }}">Retour à la liste</a></div>
-            <div class="col-3 float-left text-center">
-                {{ form_start(delete_form) }}
-                <input type="submit" value="Supprimer" class="btn btn-outline-danger">
-                {{ form_end(delete_form) }}
+            {{ form_start(edit_form) }}
+                {{ form_row(edit_form.title) }}
+                {{ form_row(edit_form.content) }}
+                {{ form_row(edit_form.author) }}
+                {% if edit_form.published == true %}
+                 {{ form_row(edit_form.published) }}
+                {% endif %}
+                <button type="submit" value="Modifier"
+                        class="btn btn-outline-success">Modifier
+                </button>
 
-            </div>
+                <a class="btn btn-outline-secondary"
+                       href="{{ path('post_index') }}">Retour à la liste
+                </a>
+            {{ form_end(edit_form) }}
         </div>
     </div>
 
-    {{ form_end(edit_form) }}
+
+    {{ form_start(delete_form) }}
+    {{ form_widget(delete_form) }}
+
+    <input type="submit" value="Supprimer" class="btn btn-outline-danger"/>
+    {{ form_end(delete_form) }}
+
+
 {% endblock %}
