--- a/app/Resources/views/user/new.html.twig
+++ b/app/Resources/views/user/new.html.twig
@@ -1,16 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Création d'utilisateur</h1>
-
+    <h1>Création d'un nouvel utilisateur</h1>
+    <hr>
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Créer" />
+    <p> <input type="submit" value="Créer" class="btn btn-info" /> </p>
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('user_index') }}">Retour à la liste</a>
-        </li>
-    </ul>
+            <a type="button" class="btn btn-outline-secondary" href="{{ path('user_index') }}">Retour à la liste</a>
 {% endblock %}
